--- a/package.json
+++ b/package.json
@@ -5,18 +5,30 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "gatsby": "^2.19.43",
     "gatsby-image": "^2.2.43",
+    "gatsby-plugin-emotion": "^4.1.25",
     "gatsby-plugin-manifest": "^2.2.47",
     "gatsby-plugin-offline": "^3.0.40",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-sharp": "^2.4.12",
-    "gatsby-source-filesystem": "^2.1.55",
+    "gatsby-plugin-typography": "^2.3.25",
+    "gatsby-remark-graphviz": "^1.1.24",
+    "gatsby-remark-mathjax": "^1.0.0",
+    "gatsby-remark-vscode": "^2.0.3",
+    "gatsby-source-filesystem": "^2.1.56",
+    "gatsby-transformer-remark": "^2.6.59",
     "gatsby-transformer-sharp": "^2.3.18",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-plugin-code": "^0.16.19",
+    "typography-theme-funston": "^0.16.19",
+    "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
