--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-sharp": "^2.4.12",
     "gatsby-plugin-typography": "^2.3.25",
+    "gatsby-remark-containers": "^1.0.0",
     "gatsby-remark-graphviz": "^1.1.24",
     "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-vscode": "^2.0.3",
