--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-markbook",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Markbook - Personal Markdown Book",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "RintarouTW <shuho.chou@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.20.3",
@@ -49,9 +49,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/RintarouTW/gatsby-markbook"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/RintarouTW/gatsby-markbook/issues"
   }
 }
