--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/RintarouTW/gatsby-markbook"
+    "url": "https://github.com/RintarouTW/gatsby-markbook.git"
   },
   "bugs": {
     "url": "https://github.com/RintarouTW/gatsby-markbook/issues"
