--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-remark-containers": "^1.0.0",
     "gatsby-remark-graphviz": "^1.2.1",
     "gatsby-remark-mathjax": "^1.0.0",
+    "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-remark-vscode": "^2.0.3",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
