KaTeX : client side rendering instead of server side prism.js instead of vscode code highlight.

--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "gatsby-remark-containers": "^1.0.0",
     "gatsby-remark-graphviz": "^1.2.1",
     "gatsby-remark-mathjax": "^1.0.0",
+    "gatsby-remark-prismjs": "^3.4.1",
     "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-remark-vscode": "^2.0.3",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.2",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "rehype-katex": "^3.0.0",
+    "remark-math": "^2.0.1",
+    "typescript": "^3.8.3",
     "typography": "^0.16.19",
     "typography-plugin-code": "^0.16.19",
     "typography-theme-funston": "^0.16.19",
