--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.2",
     "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-remark-autolink-headers": "^2.2.1",
     "gatsby-remark-containers": "^1.0.0",
     "gatsby-remark-graphviz": "^1.2.1",
     "gatsby-remark-mathjax": "^1.0.0",
