--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.20.3",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-emotion": "^4.2.1",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.3.2",
     "gatsby-plugin-mdx": "^1.1.2",
     "gatsby-plugin-offline": "^3.1.1",
